sets max-width to first section, fixes responsiveness of chart, adds hover to cards

--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -225,8 +225,13 @@ hr {
   height: 445px;
   margin: 6rem 0;
   overflow-x: auto;
+  direction: rtl;
   /* Handle */
   /* Handle on hover */
+}
+
+.timeline-wrapper * {
+  direction: ltr;
 }
 
 .timeline-wrapper::-webkit-scrollbar {
