--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -185,6 +185,12 @@ p {
   }
 }
 
+@media screen and (min-width: 1750px) {
+  .page-container {
+    margin-right: auto;
+  }
+}
+
 .page-container .main {
   max-width: 1106px;
   margin-left: auto;
@@ -248,17 +254,10 @@ p {
   margin: 2.5rem 0 1.5rem;
 }
 
-.chart-container {
-  padding: 3rem;
-  max-width: 1100px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media screen and (max-width: 575px) {
-  .chart-container {
-    padding: 1rem;
-  }
+#chart-container .main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 @media screen and (max-width: 575px) {
