--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -157,6 +157,10 @@ p {
     max-width: unset;
   }
 
+  @media screen and (min-width: 1750px) {
+    margin-right: auto;
+  }
+
   .main {
     max-width: 1106px;
     margin-left: auto;
@@ -207,14 +211,18 @@ p {
   }
 }
 
-.chart-container {
-  padding: 3rem;
-  max-width: 1100px;
-  margin-left: auto;
-  margin-right: auto;
+#chart-container {
+  // padding: 3rem;
+  // max-width: 1100px;
+  // margin-left: auto;
+  // margin-right: auto;
 
   @media screen and (max-width: 575px) {
-    padding: 1rem;
+    // padding: 1rem;
+  }
+
+  .main {
+    flex-grow: 1;
   }
 }
 
