--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -186,6 +186,11 @@ hr {
   height: 445px;
   margin: 6rem 0;
   overflow-x: auto;
+  direction: rtl;
+
+  * {
+    direction: ltr;
+  }
 
   &::-webkit-scrollbar {
     height: 2px;
@@ -220,6 +225,18 @@ hr {
     width: 100%;
     height: 2px;
     background-color: $color3;
+
+    // @media screen and (max-width: 1375px) {
+    //   width: 110vw;
+    // }
+
+    // @media screen and (max-width: 1150px) {
+    //   width: 120vw;
+    // }
+
+    // @media screen and (max-width: 980px) {
+    //   width: 130vw;
+    // }
   }
 
   .timeline-main {
