--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -216,17 +216,31 @@ p {
 }
 
 #chart-container {
-  // padding: 3rem;
-  // max-width: 1100px;
-  // margin-left: auto;
-  // margin-right: auto;
-
-  @media screen and (max-width: 575px) {
-    // padding: 1rem;
-  }
-
   .main {
     flex-grow: 1;
+
+    .legend {
+      .title {
+        color: $color13;
+        font-weight: 700;
+        letter-spacing: 2px;
+        font-size: 16px;
+
+        @media screen and (max-width: 575px) {
+          font-size: 12px;
+        }
+      }
+
+      h1 {
+        font-size: 42px;
+        font-weight: 900;
+        margin-bottom: 2.5rem;
+
+        @media screen and (max-width: 575px) {
+          font-size: 24px;
+        }
+      }
+    }
   }
 }
 
