--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -218,6 +218,13 @@ p {
 #chart-container {
   .main {
     flex-grow: 1;
+    border: 1px solid $color5;
+    border-radius: 7px;
+    padding: 2.5rem 1.75rem;
+
+    @media screen and (max-width: 575px) {
+      padding: 0.75rem;
+    }
 
     .legend {
       .title {
