adds proper commenting

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -199,7 +199,7 @@ p {
   }
 }
 
-#financial-planning {
+#financial-planning-abbr {
   .main {
     @media screen and (min-width: 992px) {
       padding-right: 1.5rem;
