adds comments to stylesheet

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 @import "./_constants.scss";
 
+// /////////////////////////////////////////////////////// GENERAL STYLING ///////////////////////////////////////////////////////////////
+
 :root {
   --section-padding: 4rem;
 }
@@ -56,7 +58,6 @@ table {
   border-collapse: collapse;
   font-size: 20px;
   border-radius: 7px;
-  // min-width: 720px;
   width: 100%;
 
   @media screen and (max-width: 991px) {
@@ -182,6 +183,8 @@ p {
   }
 }
 
+// /////////////////////////////////////////////////////// NAVBAR START ///////////////////////////////////////////////////////////////
+
 #navbar {
   position: fixed;
   top: 0;
@@ -199,6 +202,10 @@ p {
   }
 }
 
+// /////////////////////////////////////////////////////// NAVBAR END ///////////////////////////////////////////////////////////////
+
+// /////////////////////////////////////////////////////// FINANCIAL PLANNING START ///////////////////////////////////////////////////////////////
+
 #financial-planning-abbr {
   .main {
     @media screen and (min-width: 992px) {
@@ -214,6 +221,10 @@ p {
     }
   }
 }
+
+// /////////////////////////////////////////////////////// FINANCIAL PLANNING END ///////////////////////////////////////////////////////////////
+
+// /////////////////////////////////////////////////////// CHART START ///////////////////////////////////////////////////////////////
 
 #chart-container {
   .main {
@@ -250,6 +261,10 @@ p {
     }
   }
 }
+
+// /////////////////////////////////////////////////////// CHART END ///////////////////////////////////////////////////////////////
+
+// /////////////////////////////////////////////////////// STOCKBROKER START ///////////////////////////////////////////////////////////////
 
 #stockbroker-shutdown {
   .row {
@@ -391,6 +406,10 @@ p {
   }
 }
 
+// /////////////////////////////////////////////////////// STOCKBROKER END ///////////////////////////////////////////////////////////////
+
+// /////////////////////////////////////////////////////// REVIEWS / COMMENTS START ///////////////////////////////////////////////////////////////
+
 #reviews {
   .review-btns {
     display: flex;
@@ -438,6 +457,10 @@ p {
   }
 }
 
+// /////////////////////////////////////////////////////// REVIEWS / COMMENTS END ///////////////////////////////////////////////////////////////
+
+// /////////////////////////////////////////////////////// NAVIGATE START ///////////////////////////////////////////////////////////////
+
 #navigate {
   margin-top: 8rem;
 
@@ -470,3 +493,5 @@ p {
     }
   }
 }
+
+// /////////////////////////////////////////////////////// NAVIGATE END ///////////////////////////////////////////////////////////////
