--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -225,24 +225,10 @@ hr {
   height: 445px;
   margin: 6rem 0;
   overflow-x: auto;
-  /* Handle */
-  /* Handle on hover */
 }
 
 .timeline-wrapper::-webkit-scrollbar {
-  height: 2px;
-}
-
-.timeline-wrapper::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-.timeline-wrapper::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-.timeline-wrapper::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  height: 0px;
 }
 
 @media screen and (max-width: 767px) {
@@ -259,11 +245,26 @@ hr {
           transform: translateY(-50%);
 }
 
+.timeline-wrapper .timeline-main .slide,
+.timeline-wrapper .middle-line .slide {
+  position: absolute;
+  top: -25px;
+  right: 125px;
+  color: #b2b2b2;
+}
+
+@media screen and (max-width: 767px) {
+  .timeline-wrapper .timeline-main .slide,
+  .timeline-wrapper .middle-line .slide {
+    display: none;
+  }
+}
+
 .timeline-wrapper .middle-line {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #b2b2b2;
+  background-color: #e6e6e6;
 }
 
 @media screen and (max-width: 1850px) {
@@ -323,7 +324,7 @@ hr {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color: #b2b2b2;
+  background-color: #e6e6e6;
 }
 
 .timeline-wrapper .timeline-main .item .arrow {
@@ -359,7 +360,7 @@ hr {
 
 .timeline-wrapper .timeline-main .item .content .text p {
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .timeline-wrapper .timeline-main .item:nth-child(even) .content {
@@ -372,5 +373,25 @@ hr {
   bottom: unset;
   -webkit-transform: translateX(-50%) rotate(180deg);
           transform: translateX(-50%) rotate(180deg);
+}
+
+@media screen and (min-width: 576px) {
+  .progress-header {
+    position: fixed;
+    top: 0;
+    z-index: 6;
+    width: 100%;
+    background-color: #f1f1f1;
+  }
+  .progress-header .progress-container {
+    width: 100%;
+    height: 4px;
+    background: #ccc;
+  }
+  .progress-header .progress-container .progress-bar {
+    height: 4px;
+    background: #ffc32c;
+    width: 0%;
+  }
 }
 /*# sourceMappingURL=utilities.css.map */
